[gd_scene load_steps=18 format=2]

[ext_resource path="res://Characters/Fish/Fish3/1.png" type="Texture" id=1]
[ext_resource path="res://Characters/Fish/Fish3/3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/WanderControler.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/Fish/Fish3/4.png" type="Texture" id=10]
[ext_resource path="res://Characters/Fish/Fish3/2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 3.83231

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.02925
height = 9.35109

[sub_resource type="CircleShape2D" id=4]
radius = 89.4605

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.02882
height = 8.60056

[sub_resource type="CircleShape2D" id=6]
radius = 4.81899

[node name="Fish1" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )
acc = 75
max_speed = 60

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.594601, -9.84461 )
scale = Vector2( 0.653148, 0.515823 )
frames = SubResource( 1 )
playing = true
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 1.56798, -15.273 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.231373 )
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_layer = 2147483648
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 1.19363, -15.3537 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 6 )

[node name="WanderControler" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]

[editable path="PlayerDetection"]

[editable path="HitBox"]

[editable path="SoftCollision"]
